smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/metadata/not-newline-after-metadata.smithy
// Parse error at line 3, column 9 near `\nf`: Expected one or more spaces | Model
$version: "2.0"
metadata
foo = "bar"
